gcc/testsuite/g++.dg/gomp/pr79429.C
// PR c++/79429

#pragma omp ordered // { dg-error "expected declaration specifiers" }
